Permission Done & word-wrap Fixed

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -94,3 +94,6 @@
     background-color: #fff;
     border-color: #dee2e6;
 }
+.word-wrap{
+    text-wrap: wrap;
+}
